@@ -1,7 +1,9 @@
 v0.12
+	* ADD : Support for GeoTagged images. qmake GEOIMAGE=1 to activate. requires exiv2 (by Timo Schlüßler)
+	* ADD : Move to the next field on enter in properties dock tags (by Travers Carter) (Refs #1137)
 	* ADD : revised OSB format. Allows to use large map files directly from disk with low memory footprint.
-	* FIX : Native render doesn't render anything at high lat/long values (Closes #1135)
-	* FIX : Expand tables in the properties dock to the available width by default (Closes #1136)
+	* FIX : Native render doesn't render anything at high lat/long values(by Travers Carter)  (Closes #1135)
+	* FIX : Expand tables in the properties dock to the available width by default (by Travers Carter) (Closes #1136)
 	* FIX : make download dialog a less cluttered
 	* FIX : update the "created_by" tag at each update, not only add.
 	* ADD : Check if there are empty roads/relations during a download and propose to mark them for deletion
